<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.result.ResultFragment">

    <ImageView
        android:id="@+id/image_result"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="16dp"
        android:background="#E9E9E9"
        android:contentDescription="@string/input_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardResult"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_result">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="15dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/hasil_klasifikasi"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:stretchColumns="2">

                <TableRow>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="Kelas"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/class_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="3"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/class_value"
                        android:textSize="18sp"
                        android:breakStrategy="simple" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="Ordo"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/ordo_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="3"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/ordo_value"
                        android:textSize="18sp"
                        android:breakStrategy="simple" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="Famili"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/famili_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="3"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/famili_value"
                        android:textSize="18sp"
                        android:breakStrategy="simple" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="Genus"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/genus_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="3"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/genus_value"
                        android:textSize="18sp"
                        android:breakStrategy="simple" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:text="Spesies"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":  "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/spesies_output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_span="1"
                        android:layout_weight="1"
                        android:ellipsize="none"
                        android:maxLines="3"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/spesies_value"
                        android:textSize="18sp"
                        android:breakStrategy="simple" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>